# icc-pr-agent

./: .gitignore  Dockerfile  README.md  pr-review.yaml  pr.py  pyproject.toml  test_cli_results.txt  test_results.txt
pr_review.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  ai_reviewer.py  cli.py  config.py  diff_comparator.py  exceptions.py  file_filter.py  logger.py  models.py  orchestrator.py  record_store.py  server.py  template_engine.py
src/platform/: __init__.py  base.py  factory.py  github_adapter.py
templates/: default.md.j2
tests/: conftest.py  smoke_test_github.py
tests/unit/: test_ai_reviewer.py  test_cli.py  test_config.py  test_diff_comparator.py  test_exceptions.py  test_file_filter.py  test_github_adapter.py  test_logger.py  test_models.py  test_orchestrator.py  test_platform_factory.py  test_record_store.py  test_template_engine.py
